kubernetes/local_kind_single/basic/resources/docker.registry.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-docker-registry-ingress
  labels:
    app.kubernetes.io/name: docker-registry-ingress
    app.kubernetes.io/instance: my-docker-registry-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: self-signed-clusterissuer
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 2g
    nginx.org/client-max-body-size: 2g
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  rules:
    - host: insecure.docker.registry.local
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-docker-registry
                port:
                  number: 5000
  tls:
    - hosts:
        - insecure.docker.registry.local
      secretName: insecure.docker.registry.local-tls
